vbnc/vbnc/tests/Errors/30471.vb
Class E
    Shared Sub main()
        Dim i As Integer
        i(0) = 2
    End Sub
End Class